src/test/deca/etapeB/valid/equality.deca
// Description:
//    Opérateurs binaires d'inégalité
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
    int a = 5;
    int b = 2;
    boolean c = false;
    (a == b) != c;
}
