src/test/deca/etapeB/invalid/binary_op_bool/inequality_string_bool.deca
// Description:
//    Egalité entre bool et String
//
// Resultats:
//    Mauvais opérateurs pour l'égalité
// 
// Historique:
//    cree le 01/01/2016

{
    boolean d = true;

    if("ok" != d) {};
}
